Bug 119325 - Tooltip not shown in colour palette
Summary: Tooltip not shown in colour palette
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords: bibisected, bisected, regression
: 119317 (view as bug list)
Depends on:
Blocks: Writer-Table-Properties-Dialog
  Show dependency treegraph
 
Reported: 2018-08-17 07:07 UTC by Xisco Faulí
Modified: 2018-08-20 13:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-08-17 07:07:51 UTC
Steps to reproduce:
1. Open Writer
2. Insert a table
3. Go to table properties
4. Background - Colour
5. Hover any colour in the colour palette

-> a tooltip showing the colour's name should be displayed

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: da7040510d5be27ad7b90ffb0c962535f3375358
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded
Comment 1 Xisco Faulí 2018-08-17 07:08:47 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1f8d45c276760a173c3e30c78b8b740414a5b05f

author	Caolán McNamara <caolanm@redhat.com>	2018-06-18 21:30:10 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-06-20 12:41:53 +0200
commit 1f8d45c276760a173c3e30c78b8b740414a5b05f (patch)
tree 4e22f39b8515a1839c9dc64146725ca02ec9b6f9
parent 6e5e83025c948b699bb65839ef810a45a98ba014 (diff)
weld SvxColorTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 2 Caolán McNamara 2018-08-17 10:39:36 UTC
seems the tooltip code is run, but not with the expected relative-to-widget position
Comment 3 Commit Notification 2018-08-17 12:37:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0994fcef4b401ff7a99a9e8e882f6e2697d310c7

Resolves: tdf#119325 tooltip position should be relative to widget

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2018-08-17 12:38:38 UTC
backport to 6-1 in gerrit
Comment 5 Xisco Faulí 2018-08-20 11:42:08 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: 401cba4c20fbc930f034168872642428d7459218
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Caolán, Thanks for fixing this!!
Comment 6 Xisco Faulí 2018-08-20 12:14:00 UTC
*** Bug 119317 has been marked as a duplicate of this bug. ***
Comment 7 Commit Notification 2018-08-20 13:21:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b88053ffeed1f9fb2dda8b3bffe6353d67312e5d&h=libreoffice-6-1

Resolves: tdf#119325 tooltip position should be relative to widget

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.