Resolves: tdf#119325 tooltip position should be relative to widget

Change-Id: I244f2d6cd89fd53d7a874cac593f3759d75966da
Reviewed-on: https://gerrit.libreoffice.org/59257
Tested-by: Jenkins
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>